[package]
name = "adapteros-cp-client"
version = "0.1.0"
edition = "2021"
description = "Control Plane client for AdapterOS workers"
license = "MIT OR Apache-2.0"

[dependencies]
# Shared types
adapteros-api-types = { path = "../adapteros-api-types" }

# Async HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.35", features = ["time", "sync"] }

# Sync HTTP client (panic hook only)
ureq = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
