[package]
name = "adapteros-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
password-fallback = []
linux-keychain = []

[dependencies]
adapteros-core = { path = "../adapteros-core" }
anyhow = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
base64 = "0.22"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
