[package]
name = "adapteros-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
password-fallback = []
linux-keychain = []
aws-kms = ["aws-config", "aws-sdk-kms", "aws-smithy-runtime", "aws-smithy-types"]
gcp-kms = ["google-cloudkms1", "yup-oauth2", "hyper-rustls"]
azure-kms = ["azure_identity", "azure_security_keyvault", "azure_core"]

[dependencies]
adapteros-core = { path = "../adapteros-core" }
anyhow = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
async-trait = "0.1"
tokio = { workspace = true }
futures-util = { workspace = true }

# AWS KMS support (optional)
aws-config = { version = "1.1", optional = true }
aws-sdk-kms = { version = "1.12", optional = true }
aws-smithy-runtime = { version = "1.1", optional = true }
aws-smithy-types = { version = "1.1", optional = true }

# GCP KMS support (optional)
google-cloudkms1 = { version = "5.0", optional = true }
yup-oauth2 = { version = "8.3", optional = true }
hyper-rustls = { version = "0.24", optional = true }

# Azure Key Vault support (optional)
azure_identity = { version = "0.18", optional = true }
azure_security_keyvault = { version = "0.21", optional = true }
azure_core = { version = "0.18", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.4"
