[package]
name = "adapteros-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
password-fallback = ["argon2", "chacha20poly1305"]
linux-keychain = ["dep:libc", "dep:nix", "dep:secret-service"]
aws-kms = [
    "aws-config",
    "aws-credential-types",
    "aws-sdk-kms",
    "aws-smithy-runtime",
    "aws-smithy-types",
    "aws-types",
]
gcp-kms = []
[dependencies]
adapteros-core = { path = "../adapteros-core" }
anyhow = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
aes-gcm = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_jcs = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
zip = "1.1"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
async-trait = "0.1"
tokio = { workspace = true }
futures-util = { workspace = true }
libc = { version = "0.2", optional = true }
nix = { workspace = true, optional = true }
secret-service = { version = "5.1.0", optional = true }
argon2 = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
x509-parser = { version = "0.16", features = ["verify"] }
pem = "3.0"
# macOS Security Framework (for SEP attestation)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
security-framework-sys = "2.9"
core-foundation = "0.9"
core-foundation-sys = "0.8"
# AWS KMS support (optional)
aws-config = { version = "1.1", optional = true }
aws-credential-types = { version = "1.1", optional = true }
aws-sdk-kms = { version = "1.12", optional = true }
aws-smithy-runtime = { version = "1.1", optional = true }
aws-smithy-types = { version = "1.1", optional = true }
aws-types = { version = "1.1", optional = true }
[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.10"
adapteros-config = { path = "../adapteros-config", features = ["testkit"] }
