[package]
name = "adapteros-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
adapteros-core = { path = "../adapteros-core", features = ["sqlx"] }
adapteros-api-types = { path = "../adapteros-api-types" }

# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Additional
tracing = "0.1"
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"

# Cryptography for migration verification
blake3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
