[package]
name = "adapteros-deterministic-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic async executor for AdapterOS with serial task execution and event logging"

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-db = { path = "../adapteros-db" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_chacha = "0.3"
sha2 = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
futures = "0.3"
num_cpus = "1.0"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
tempfile = { workspace = true }
