[package]
name = "adapteros-diagnostics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diagnostic event contract and producer API for adapterOS"

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-telemetry = { path = "../adapteros-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lib]
name = "adapteros_diagnostics"
path = "src/lib.rs"
