[package]
name = "adapteros-diagnostics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Diagnostic event contract and producer API for adapterOS"

[dependencies]
adapteros-telemetry = { path = "../adapteros-telemetry" }

[dev-dependencies]
proptest = { workspace = true }
[lib]
name = "adapteros_diagnostics"
path = "src/lib.rs"
