[package]
name = "adapteros-domain"
version.workspace = true
edition = "2021"
authors = ["adapterOS Team"]
description = "Domain-specific adapter layer for adapterOS with deterministic execution"
license = "MIT OR Apache-2.0"

[dependencies]
# adapterOS core dependencies
adapteros-core = { path = "../adapteros-core" }
adapteros-deterministic-exec = { path = "../adapteros-deterministic-exec" }
adapteros-trace = { path = "../adapteros-trace" }
adapteros-numerics = { path = "../adapteros-numerics" }
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
# Error handling
thiserror = { workspace = true }
# Logging
tracing = { workspace = true }
# Async runtime
tokio = { workspace = true, features = ["full"] }
# Parking lot
parking_lot = { workspace = true }
# Unicode normalization for text processing
unicode-normalization = "0.1"
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
