[package]
name = "adapteros-e2e"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
prod-gate = []
worker-gate = []

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-lora-kernel-api = { path = "../adapteros-lora-kernel-api" }
adapteros-lora-router = { path = "../adapteros-lora-router" }
adapteros-lora-worker = { path = "../adapteros-lora-worker" }
adapteros-server-api = { path = "../adapteros-server-api" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
