[package]
name = "adapteros-embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adapteros-core = { path = "../adapteros-core" }
adapteros-crypto = { path = "../adapteros-crypto" }
adapteros-config = { path = "../adapteros-config" }
adapteros-lora-mlx-ffi = { path = "../adapteros-lora-mlx-ffi", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
toml = { workspace = true }
[features]
default = []
mlx = ["dep:adapteros-lora-mlx-ffi"]
training = []
[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
